# exp--onnx_int8_paradox

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
models/: README.md
output/: model_int8.onnx  optimization_results.json  report.md
results/: model_int8.onnx
src/: README.md  __init__.py  analyzer.py  benchmarker.py  converter.py  demo.py  quantizer.py
src/diagnose/: diagnose_int8.py  size_compare.py
src/onnx_utils/: __init__.py  onnx_constrain_session.py  ort_session_constrain.py
