[project]
name = "25-08-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "netron>=8.5.0",
    "numpy==1.26.4",
    "onnx==1.17.0",
    "onnxruntime>=1.22.1",
    "onnxslim>=0.1.64",
    "seaborn>=0.13.2",
    "torch==2.1",
    "torchvision>=0.16.0",
    "ultralytics>=8.3.179",
]
